changes
- fix bug that makes worlds not save
- add able to check if player is on combatify, viafabricplus (no combatify) and normal cts